kubernetes/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: upload-file
  labels:
    app: upload-file
spec:
  selector:
    matchLabels:
      app: upload-file
  replicas: 3
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: upload-file
    spec: 
      terminationGracePeriodSeconds: 1
      containers:
      - name: upload-file
        image: javierorta/upload-file:1.5
        imagePullPolicy: Always
        ports:
        - containerPort: 4000
